Fixed logic in GetLeagues, moved #title css

--- a/src/GetLeagues/GetLeagues.css
+++ b/src/GetLeagues/GetLeagues.css
@@ -2,3 +2,12 @@
   border: 1px solid;
   background-color: lightgrey;
 }
+
+h1 {
+  position: absolute;
+  margin-left: auto;
+}
+
+h2 {
+  margin-top: 35px;
+}
