--- a/src/GetLeagues/GetLeagues.css
+++ b/src/GetLeagues/GetLeagues.css
@@ -16,7 +16,7 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: flex-start;
+  align-items: center;
 }
 
 #leagueForm {
